test/negative/006_num_out_of_range.fx
// expect: range
val a = 99999999999999999999999999i32
println(a)
