test/negative/006_num_out_of_range.err
006_num_out_of_range.fx:2:9: error: the numeric literal is out of range for the specified type
